[package]
name = "monero-epee-traits"
version = "0.1.0"
description = "Traits for working with `epee`-encoded objects"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
monero-epee = { git = "https://github.com/monero-oxide/monero-oxide", default-features = false }
