[package]
name = "monero-web-sys-rpc"
version = "0.1.0"
description = "RPC connection to a Monero daemon via web-sys, built around monero-oxide"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-wallet-util/tree/main/interface/web-sys"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "^1.5", default-features = false, features = ["alloc"] }

wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["Blob", "Request", "RequestInit", "Response", "Window"] }

monero-daemon-rpc = { git = "https://github.com/monero-oxide/monero-oxide", rev = "e2e80947549b176469967fcdde90a23f69881802", default-features = false }
